# distributed-llm-mac

./: .gitignore  Makefile  README.md  pyproject.toml
config/: settings.json  workers.json
docs/: BENCHMARK_GUIDE.md  DECISION_RECORD.md  DISTRIBUTED_LLM_PERFORMANCE_ANALYSIS.md  benchmarking.md
examples/texts/: research_paper_1.txt  research_paper_2.txt
scripts/: benchmark.py  process_directory.py  quick_benchmark.sh  quickstart.py
src/: __init__.py  config.py  load_balancer.py  main.py  worker.py
tests/: test_mock_mac_cluster.py
